--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -349,7 +349,7 @@ template {
   display: none;
 }
 
-.btn, .btn-secondary, .btn-primary, #aluno_content .btn_add_curso, .form_flex input[type=submit], .forms input[type=submit], .btn-default-delete, #aluno_content .bg_info_delete_curso .btn_deletar_curso, .btn-default, #aluno_content .btn_add_aula, #aluno_content .btn_add_reposicao, #aluno_content .btn_add_ponto_extra {
+.btn, .btn-secondary, .btn-primary, #aluno_content .btn_add_curso, .form_flex input[type=submit], .forms input[type=submit], .btn-default-delete, #aluno_content .bg_info_delete_curso .btn_deletar_curso, .btn-default, #page_login #login_content #form_login input[type=submit], #aluno_content .btn_add_aula, #aluno_content .btn_add_reposicao, #aluno_content .btn_add_ponto_extra {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -359,22 +359,22 @@ template {
   border: 0px;
   cursor: pointer;
 }
-.btn svg, .btn-secondary svg, .btn-primary svg, #aluno_content .btn_add_curso svg, .form_flex input[type=submit] svg, .forms input[type=submit] svg, .btn-default-delete svg, #aluno_content .bg_info_delete_curso .btn_deletar_curso svg, .btn-default svg, #aluno_content .btn_add_aula svg, #aluno_content .btn_add_reposicao svg, #aluno_content .btn_add_ponto_extra svg {
+.btn svg, .btn-secondary svg, .btn-primary svg, #aluno_content .btn_add_curso svg, .form_flex input[type=submit] svg, .forms input[type=submit] svg, .btn-default-delete svg, #aluno_content .bg_info_delete_curso .btn_deletar_curso svg, .btn-default svg, #page_login #login_content #form_login input[type=submit] svg, #aluno_content .btn_add_aula svg, #aluno_content .btn_add_reposicao svg, #aluno_content .btn_add_ponto_extra svg {
   max-width: 100px;
   max-height: 100px;
   height: auto;
   width: 20px;
 }
 
-.btn-default, #aluno_content .btn_add_aula, #aluno_content .btn_add_reposicao, #aluno_content .btn_add_ponto_extra {
+.btn-default, #page_login #login_content #form_login input[type=submit], #aluno_content .btn_add_aula, #aluno_content .btn_add_reposicao, #aluno_content .btn_add_ponto_extra {
   background: #f0f0f0;
   color: #333;
   border: 1px solid #666;
 }
-.btn-default:hover, #aluno_content .btn_add_aula:hover, #aluno_content .btn_add_reposicao:hover, #aluno_content .btn_add_ponto_extra:hover {
+.btn-default:hover, #page_login #login_content #form_login input[type=submit]:hover, #aluno_content .btn_add_aula:hover, #aluno_content .btn_add_reposicao:hover, #aluno_content .btn_add_ponto_extra:hover {
   background: #fdfdfd;
 }
-.btn-default:active, #aluno_content .btn_add_aula:active, #aluno_content .btn_add_reposicao:active, #aluno_content .btn_add_ponto_extra:active {
+.btn-default:active, #page_login #login_content #form_login input[type=submit]:active, #aluno_content .btn_add_aula:active, #aluno_content .btn_add_reposicao:active, #aluno_content .btn_add_ponto_extra:active {
   background: #e3e3e3;
   box-shadow: inset 0px 1px 3px #bdbdbd;
 }
@@ -503,6 +503,58 @@ inputs, .input-primary {
 }
 .nav_flex ul li a, nav.nav_cursos_aluno ul li a {
   user-select: none;
+}
+
+#header_admin {
+  grid-area: header;
+  background: #245da7;
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+}
+#header_admin #header_admin_center {
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px auto;
+  padding: 0px 40px;
+  max-width: 1200px;
+}
+
+#bg_main_menu_lateral_admin {
+  grid-area: aside;
+  background: #222;
+}
+#bg_main_menu_lateral_admin figure#bg_logo {
+  padding: 20px;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#bg_main_menu_lateral_admin figure#bg_logo img {
+  max-width: 150px;
+  max-height: 100%;
+}
+#bg_main_menu_lateral_admin nav {
+  margin-top: 40px;
+}
+#bg_main_menu_lateral_admin nav ul li {
+  clear: both;
+}
+#bg_main_menu_lateral_admin nav ul li a {
+  padding: 13px 15px;
+  color: #fafafa;
+  height: auto;
+  font-size: 14px;
+  width: 100%;
+  display: block;
+}
+#bg_main_menu_lateral_admin nav ul li a:hover {
+  color: #80ace4;
+  background: #333;
 }
 
 #form_add_aula {
@@ -658,7 +710,10 @@ inputs, .input-primary {
 }
 
 #controle_aula {
+  position: relative;
+  opacity: 0;
   overflow: hidden;
+  transition: all 0.5s;
 }
 #controle_aula h1 {
   color: #333;
@@ -677,7 +732,7 @@ inputs, .input-primary {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding-bottom: 20px;
 }
 #controle_aula #form_select_aluno label {
@@ -688,16 +743,23 @@ inputs, .input-primary {
   border-right: 0px;
 }
 #controle_aula #form_select_aluno .div_input {
-  background: #f90;
   display: flex;
   float: left;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-grow: 1;
 }
 #controle_aula #form_select_aluno .div_input select {
   padding: 10px;
   border: 1px solid #444;
   font-weight: bold;
   font-size: 16px;
+  flex-grow: 1;
+  max-width: 500px;
+}
+#controle_aula #form_select_aluno .div_input select:focus {
+  outline: 0;
+  border-color: #245da7;
+  background: #ffe;
 }
 #controle_aula #form_select_aluno button {
   float: left;
@@ -708,6 +770,60 @@ inputs, .input-primary {
 #controle_aula #form_select_aluno button svg {
   margin-bottom: -2px;
   margin-right: 5px;
+}
+
+@keyframes spinner-line-fade-more {
+  0%, 100% {
+    opacity: 0;
+    /* minimum opacity */
+  }
+  1% {
+    opacity: 1;
+  }
+}
+@keyframes spinner-line-fade-quick {
+  0%, 39%, 100% {
+    opacity: 0.25;
+    /* minimum opacity */
+  }
+  40% {
+    opacity: 1;
+  }
+}
+@keyframes spinner-line-fade-default {
+  0%, 100% {
+    opacity: 0.22;
+    /* minimum opacity */
+  }
+  1% {
+    opacity: 1;
+  }
+}
+@keyframes spinner-line-shrink {
+  0%, 25%, 100% {
+    /* minimum scale and opacity */
+    transform: scale(0.5);
+    opacity: 0.25;
+  }
+  26% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+.load_element {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin: auto;
+  z-index: 5;
+  background: #f90;
+  border-radius: 50%;
+}
+
+#page_content {
+  position: relative;
 }
 
 nav.nav_cursos_aluno {
@@ -1219,56 +1335,82 @@ input:disabled, textarea:disabled {
   content: " ";
 }
 
-#header_admin {
-  grid-area: header;
-  background: #333;
-  border-bottom: 2px solid #ccc;
-  width: 100%;
-}
-#header_admin #header_center {
-  height: 50px;
+#page_login {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin: 0px auto;
-  padding: 0px 40px;
-  max-width: 1200px;
+  justify-content: center;
+  min-width: 100%;
+  min-height: 100vh;
+  background: url("../img/background-login.jpg") no-repeat;
+  background-size: cover;
 }
-
-#bg_main_menu_lateral_admin {
-  grid-area: aside;
-  background: #222;
+#page_login #login_content {
+  max-width: 400px;
+  margin-top: -15%;
 }
-#bg_main_menu_lateral_admin figure#bg_logo {
-  padding: 20px;
-  max-width: 100%;
-  height: auto;
-  overflow: hidden;
+#page_login #login_content #login_logo {
   display: flex;
   justify-content: center;
+  margin-bottom: 40px;
+}
+#page_login #login_content #login_logo figure img {
+  max-width: 100%;
+}
+#page_login #login_content #form_login {
+  max-width: 400px;
+  min-height: 250px;
+  background: #ffffff66;
+  border-radius: 5px;
+  padding: 40px 30px;
+}
+#page_login #login_content #form_login h3 {
+  text-align: center;
+  padding-bottom: 10px;
+  color: #122e53;
+}
+#page_login #login_content #form_login div {
+  margin: auto;
+  border: 1px solid #444;
+  overflow: hidden;
+  border-radius: 3px;
+  display: flex;
+  margin-top: 20px;
+  max-width: 250px;
+}
+#page_login #login_content #form_login div:focus {
+  border-color: #f90 !important;
+  color: #f90 !important;
+}
+#page_login #login_content #form_login div label {
+  display: flex;
   align-items: center;
+  color: #fff;
+  justify-content: center;
+  background: #17335e;
+  width: 40px;
+  border: 0px;
 }
-#bg_main_menu_lateral_admin figure#bg_logo img {
-  max-width: 150px;
-  max-height: 100%;
+#page_login #login_content #form_login div input {
+  border-radius: 0px;
+  flex-grow: 1;
+  padding: 10px;
+  border: 0px;
+  border: 1px solid #bbbbc4;
+  background-color: #bbbbc4;
 }
-#bg_main_menu_lateral_admin nav {
-  margin-top: 40px;
+#page_login #login_content #form_login div input:focus {
+  outline: 0px;
+  border-color: #245da7;
 }
-#bg_main_menu_lateral_admin nav ul li {
-  clear: both;
+#page_login #login_content #form_login input[type=submit] {
+  width: 50%;
+  max-width: 50%;
+  margin: 30px auto 0px auto;
+  color: #fff;
+  background: #17335e;
 }
-#bg_main_menu_lateral_admin nav ul li a {
-  padding: 13px 15px;
-  color: #fafafa;
-  height: auto;
-  font-size: 14px;
-  width: 100%;
-  display: block;
-}
-#bg_main_menu_lateral_admin nav ul li a:hover {
-  color: #80ace4;
-  background: #333;
+#page_login #login_content #form_login input[type=submit]:hover {
+  background: #214987;
 }
 
 #block_screen {
@@ -1299,13 +1441,13 @@ svg {
 
 body {
   background: #ccc;
-  background: #ddd url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm380-16-x_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=d0c544f028f2405b219eb997cb580e21");
-  background-size: 100% auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
 }
 
-#app {
+#adminContent {
+  background: #ddd url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm380-16-x_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=d0c544f028f2405b219eb997cb580e21");
+  background-size: 100% auto;
   max-width: 100%;
   margin: 0 auto;
   display: grid;
@@ -1363,6 +1505,19 @@ body {
   padding: 10px;
   margin-bottom: 10px;
   border-bottom: 1px solid #ccc;
+}
+.confirm_box .btn_deletar {
+  background: #e63d3d;
+  color: #fff;
+}
+.confirm_box .btn_deletar:hover {
+  background: red;
+}
+.confirm_box .btn_cancelar {
+  background: #ccc;
+}
+.confirm_box .btn_cancelar:hover {
+  background: #ddd;
 }
 .confirm_box button {
   border: 1px solid #ccc;
