--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -3,7 +3,10 @@
 
 
 #controle_aula {
+  position:relative;
+  opacity: 0;
   overflow: hidden;
+  transition: all 0.5s;
   h1 {
     color: $title-color-dark;
     text-align: center;
@@ -22,7 +25,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding-bottom:20px;
     label{
       background:#fff;
@@ -33,15 +36,25 @@
     }
 
     .div_input {
-      background:#f90;
       display:flex;
       float: left;
-      justify-content: center;
+      justify-content: flex-start;
+      flex-grow: 1;
       select{
           padding: 10px;
           border: 1px solid #444;
           font-weight: bold;
           font-size:16px;
+      flex-grow: 1;
+      max-width: 500px;
+      &:focus{
+        outline: 0;
+        border-color: $primary-color;
+        background:#ffe;
+
+      }
+
+          
         }
     }
     button {
