--- a/src/assets/css/sass/elements/main_menu_lateral_admin.scss
+++ b/src/assets/css/sass/elements/main_menu_lateral_admin.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/' as *;
 
 #bg_main_menu_lateral_admin{
-  
+  z-index: 4;
     figure#bg_logo {
       padding:20px;
       max-width: 100%;
