--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -183,8 +183,9 @@ grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
  #page_content{
+   padding-top:80px;
    grid-area: cp;
-   max-width: 1300px;
+   max-width: 100%;
    min-height:100vh;
    margin:0px 60px 0px 60px;
  }
