--- a/src/assets/css/sass/elements/header_admin.scss
+++ b/src/assets/css/sass/elements/header_admin.scss
@@ -64,8 +64,8 @@
               width:100%;
               padding-bottom:-2px;
             }
-            #user_categoria{
-              font-size:12px; color:#999;
+            #user_privilegio{
+              font-size:14px; color:#999;
             }
           }
         }
