--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -631,6 +631,46 @@ inputs, .input-primary {
   background: #333;
 }
 
+#cursos_info h1 {
+  text-align: center;
+  padding-bottom: 20px;
+}
+#cursos_info .page_content {
+  padding-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, auto));
+  gap: 20px;
+}
+#cursos_info .page_content .curso_content {
+  padding: 20px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  background: #e0e0e0;
+}
+#cursos_info .page_content .curso_content h2 {
+  margin-bottom: 20px;
+}
+#cursos_info .page_content .curso_content .categoria {
+  display: none;
+}
+#cursos_info .page_content .curso_content .modulos {
+  margin-bottom: 20px;
+}
+#cursos_info .page_content .curso_content .modulos h3 {
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+#cursos_info .page_content .curso_content .modulos ul li {
+  margin-left: 20px;
+}
+#cursos_info .page_content .curso_content .div_valor, #cursos_info .page_content .curso_content .div_duracao {
+  margin-top: 10px;
+  font-size: 20px !important;
+}
+#cursos_info .page_content .curso_content .div_valor p, #cursos_info .page_content .curso_content .div_duracao p {
+  font-weight: bold;
+}
+
 #form_add_aula {
   border: 2px solid #2d74d1;
   box-shadow: 0px 1px 1px #222;
@@ -959,6 +999,7 @@ nav.nav_cursos_aluno ul li .active {
   box-shadow: inset 0px 0px 3px #111;
 }
 #aluno_content .btn_add_reposicao {
+  margin-bottom: 20px;
   float: left;
   color: #8971cc;
   border-color: #8971cc;
@@ -967,6 +1008,7 @@ nav.nav_cursos_aluno ul li .active {
   background: #e7e2f4;
 }
 #aluno_content .btn_add_ponto_extra {
+  margin-bottom: 20px;
   float: left;
   color: #779214;
   border-color: #779214;
@@ -1492,7 +1534,7 @@ input:disabled, textarea:disabled {
   min-height: 100vh;
   position: absolute;
   background-color: #11111170;
-  z-index: 1;
+  z-index: 5;
   bottom: 0px;
   top: 0px;
   display: none;
