Salvar Aluno Histórico PDF

--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -19,6 +19,8 @@ $grey-color:#ccc;
 $grey-dark-color:#999;
 $grey-heavy-dark-color:#666;
 
+$prova-color: lighten($primary-color, 20%);
+$falta-color: $red-light-color;
 $reposicao-color: #8971cc;
 $ponto-extra-color: #779214;
 
