--- a/src/components/cursosInfo/index.html
+++ b/src/components/cursosInfo/index.html
@@ -145,7 +145,6 @@
                     <li>
                         Básico 2: (o aluno será capaz de usar frases e pequenos diálogos, compreendendo mais sobre a gramática e a como trabalhar com tempos verbais simples).
                     </li>
-
                 </ul>
             </div>
             <div class='div_valor'>
@@ -171,7 +170,6 @@
                     <li>
                         Intermediário 2 (o aluno conseguirá trabalhar com todos os tempos verbais, e a se expressar sobre assuntos variados).
                     </li>
-
                 </ul>
             </div>
             <div class='div_valor'>
@@ -181,7 +179,6 @@
                 <p class='duracao'>Duração: 12 meses</p>
             </div>
         </div>
-
         <!---------------------------------INGLÊS Avançado-->
         <div class='curso_content' id='ingles_avancado'>
             <h2>Inglês Avançado</h2>
@@ -196,10 +193,7 @@
                     </li>
                     <li>
                         Avançado 2 (o aluno será capaz de falar de forma mais fluente, e conhecerá mais sobre a cultura inglesa, expressões idiomáticas, phrasal verbs, além de identificar diferentes sotaques e peculiaridades do idioma).
-
                     </li>
-
-
                 </ul>
             </div>
             <div class='div_valor'>
@@ -219,15 +213,12 @@
             <div class='modulos'>
                 <h3>Módulos</h3>
                 <ul>
-
                     <li>
                         KIDS (a criança aprenderá de forma divertida, espontânea e prática, tendo o contato com a língua inglesa através de atividades, jogos, quadrinhos e dinâmicas onde ela começará a formar seu vocabulário, tendo como base o alfabeto, cores, numerais, itens do dia-a-dia além das expressões bases do idioma).
-
                     </li>
                     <li>
                         Pre-teen (o aluno será preparado para as próximas etapas do Inglês, onde terá seu vocabulário expandido, trabalhando as bases do idioma de forma dinâmica e interativa).
                     </li>
-
                 </ul>
             </div>
             <div class='div_valor'>
@@ -240,14 +231,13 @@
 
         <!---------------------------------EXCEL AVANÇADO-->
         <div class='curso_content' id='ingles_avancado'>
-            <h2>Inglês KIDS</h2>
+            <h2>Excel Avançado</h2>
             <div class='categoria'>
                 <p>Categoria: Excel</p>
             </div>
             <div class='modulos'>
                 <h3>Módulos</h3>
                 <ul>
-
                     <li>Atalhos</li>
                     <li>Tabelas Dinâmicas
                     </li>
