--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1451,6 +1451,403 @@ input:disabled, textarea:disabled {
   content: " ";
 }
 
+* {
+  box-sizing: border-box;
+}
+
+.version {
+  display: none;
+  position: absolute;
+  color: #999;
+  font-size: 14px;
+  bottom: 10px;
+  text-align: center;
+  width: 100%;
+}
+
+#form_contrato {
+  box-shadow: 0px 1px 3px #666;
+  background: #f8f8f8;
+  position: relative;
+  padding: 40px;
+  width: 100%;
+  max-width: 800px;
+  margin: 20px auto 20px auto;
+  display: block;
+  height: auto;
+  font-size: 14px;
+  color: #333;
+  overflow: hidden;
+  /*-------------------CURSO FIELDS--------------*/
+}
+#form_contrato fieldset {
+  border: 0px solid #ddd;
+  margin: 5px;
+  margin-bottom: 20px;
+  border: 1px solid #aaa;
+  padding: 20px;
+  width: 100%;
+  height: auto;
+}
+#form_contrato label {
+  padding: 6px 0px 0px 6px;
+}
+#form_contrato input {
+  border-radius: 0px 3px 3px 0px;
+  border: 1px solid #aaa;
+  padding: 6px;
+}
+#form_contrato select {
+  padding: 5px;
+}
+#form_contrato textarea {
+  resize: vertical;
+}
+#form_contrato #fieldset_resp,
+#form_contrato #fieldset_aluno {
+  position: relative;
+  overflow: hidden;
+}
+#form_contrato #fieldset_resp label,
+#form_contrato #fieldset_aluno label {
+  display: block;
+  float: left;
+  flex: 1;
+  max-width: 50px;
+}
+#form_contrato #fieldset_resp input,
+#form_contrato #fieldset_aluno input {
+  display: block;
+  flex: 2;
+}
+#form_contrato #fieldset_resp .div_input,
+#form_contrato #fieldset_aluno .div_input {
+  padding: 6px 10px;
+  width: 50%;
+  float: left;
+  overflow: hidden;
+  border-radius: 5px;
+  display: flex;
+  justify-content: flex-end;
+}
+#form_contrato #fieldset_resp .label_numero,
+#form_contrato #fieldset_aluno .label_numero {
+  max-width: 45px !important;
+  padding-left: 20px;
+}
+#form_contrato #fieldset_resp .end_numero,
+#form_contrato #fieldset_aluno .end_numero {
+  max-width: 60px !important;
+}
+#form_contrato #fieldset_resp #label_parentesco,
+#form_contrato #fieldset_aluno #label_parentesco {
+  max-width: 100px !important;
+  padding-left: 20px;
+}
+#form_contrato #fieldset_resp {
+  border-radius: 3px;
+}
+#form_contrato #fieldset_aluno {
+  display: block;
+  height: 260px;
+  border-color: #d1a296;
+  transition: height 1s, padding 1s, opacity 0.8s;
+  opacity: 1;
+}
+#form_contrato .aluno_off {
+  height: 2px !important;
+  padding: 0px;
+  opacity: 0 !important;
+  margin-bottom: 0px;
+}
+#form_contrato .display_off {
+  height: 1px !important;
+  padding: 0px;
+  opacity: 0 !important;
+  margin: 0px 0px -10px 0px !important;
+}
+#form_contrato #fieldset_curso {
+  margin: 5px;
+  height: auto;
+  width: 100%;
+  border: 1px solid #466592;
+  padding: 20px;
+}
+#form_contrato #fieldset_curso .row {
+  display: flex;
+  gap: 10px;
+  flex-shrink: 1;
+  padding: 5px;
+  min-height: 40px;
+  clear: both;
+}
+#form_contrato #fieldset_curso .row .div_input {
+  flex-grow: 1;
+  flex-shrink: 1;
+  display: flex;
+  flex-direction: row;
+}
+#form_contrato #fieldset_curso .row .div_input:first-child label {
+  text-align: left;
+}
+#form_contrato #fieldset_curso .row .div_input label {
+  color: #555;
+  padding: 0px 0px 0px 10px;
+  background: #dddde3;
+  width: 100px;
+  max-width: 100px;
+  display: flex;
+  align-items: center;
+}
+#form_contrato #fieldset_curso .row .div_input input {
+  width: 75px;
+}
+#form_contrato #fieldset_curso .row .div_input textarea {
+  width: 100%;
+}
+#form_contrato #fieldset_curso .row #div_curso_modulos textarea {
+  min-height: 70px;
+  color: #445;
+  font-size: 13px;
+}
+#form_contrato #fieldset_curso .row #curso_valor,
+#form_contrato #fieldset_curso .row #curso_desconto,
+#form_contrato #fieldset_curso .row #curso_total {
+  font-size: 16px;
+}
+#form_contrato #fieldset_curso .row #curso_total {
+  color: green;
+}
+#form_contrato #fieldset_curso .row #curso_desconto {
+  color: red;
+}
+#form_contrato #fieldset_curso .row #div_curso_inicio label,
+#form_contrato #fieldset_curso .row #div_curso_data label {
+  width: 40%;
+  max-width: 50%;
+}
+#form_contrato #fieldset_curso .row #div_curso_inicio input,
+#form_contrato #fieldset_curso .row #div_curso_data input {
+  width: 60%;
+}
+#form_contrato #fieldset_curso .row #div_curso_obs {
+  margin-top: 5px;
+}
+#form_contrato #fieldset_curso .row #div_curso_obs #curso_obs {
+  min-height: 60px !important;
+  padding: 5px;
+}
+#form_contrato #fieldset_curso #div_curso_combo {
+  margin-top: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+  background: #dddde3;
+  padding: 10px;
+  padding-bottom: 15px;
+  overflow: hidden;
+  position: relative !important;
+  user-select: none;
+}
+#form_contrato #fieldset_curso #div_curso_combo select,
+#form_contrato #fieldset_curso #div_curso_combo input {
+  height: 30px;
+}
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_textarea #combo_textarea {
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin: 10px 0px 0px 0px;
+  padding: 5px;
+  width: 100%;
+  height: auto;
+  transition: height 0.7s, padding 0.7s, opacity 0.7s, margin 0.7s;
+}
+#form_contrato #fieldset_curso #div_curso_combo #label_check_combo {
+  display: block;
+  z-index: 9;
+  top: 20px;
+  left: 10px;
+  position: absolute;
+  background: #334;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  user-select: none;
+  width: 26%;
+  transition: left 0.5s;
+  text-align: center;
+}
+#form_contrato #fieldset_curso #div_curso_combo #label_check_combo:active {
+  background: #c30f4c;
+}
+#form_contrato #fieldset_curso #div_curso_combo #label_check_combo input {
+  float: right;
+  display: none;
+}
+#form_contrato #fieldset_curso #div_curso_combo .check_combo_checked {
+  background: #ed1860 !important;
+}
+#form_contrato #fieldset_curso #div_curso_combo .check_combo_checked::after {
+  content: "✓";
+}
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_1 input {
+  pointer-events: none;
+  background: #f0f0f0;
+  color: #f0f0f0;
+}
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_2 select {
+  color: #fff;
+}
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_1,
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_2 {
+  width: 35%;
+  float: right;
+  opacity: 0.5;
+  transition: opacity 1s;
+}
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_1 input,
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_1 select,
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_2 input,
+#form_contrato #fieldset_curso #div_curso_combo #div_combo_curso_2 select {
+  pointer-events: none;
+  width: 100%;
+  user-select: none;
+}
+#form_contrato #div_resp_nome,
+#form_contrato #div_resp_end,
+#form_contrato #div_aluno_nome,
+#form_contrato #div_aluno_end {
+  width: 100% !important;
+}
+#form_contrato #div_resp_nome label,
+#form_contrato #div_resp_end label,
+#form_contrato #div_aluno_nome label,
+#form_contrato #div_aluno_end label {
+  max-width: 100px;
+}
+#form_contrato #div_resp_nome div {
+  overflow: hidden;
+}
+#form_contrato #div_resp_nome div label {
+  user-select: none;
+  margin: 0 0 0 10px;
+  padding: 6px 5px 6px 12px;
+  max-width: 250px !important;
+  cursor: pointer;
+  background: #334;
+  color: #fff;
+  border-radius: 0px 4px 4px 0px;
+}
+#form_contrato #div_resp_nome div label:active {
+  background: #12448e;
+}
+#form_contrato #div_resp_nome div label input {
+  float: right;
+  margin: 2px 5px 0px 7px;
+}
+#form_contrato #div_resp_nome .active {
+  background: #185abc;
+}
+#form_contrato #block_aluno {
+  display: none;
+  width: 100%;
+  min-height: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.1);
+}
+#form_contrato #btn_salvar {
+  float: right;
+  margin-right: 0px;
+  margin-top: 40px;
+  background: #154fa5;
+  color: #fff;
+  border: 0px;
+  padding: 15px 30px;
+  cursor: pointer;
+}
+#form_contrato #btn_salvar:hover {
+  background: #1b65d2;
+}
+#form_contrato #btn_salvar:active {
+  background: #12448e;
+}
+
+#loading_contrato {
+  display: none;
+  z-index: 5;
+  top: -20px;
+  left: -50px;
+  width: 120%;
+  height: 1200px;
+  position: absolute;
+  background: rgba(80, 80, 90, 0.2);
+}
+#loading_contrato h3 {
+  font-size: 14px;
+  background: #154fa5;
+  width: 30%;
+  color: #fff;
+  text-align: center;
+  left: 35%;
+  position: fixed;
+  padding: 20px 0px;
+  position: absolute;
+  top: 30%;
+}
+#loading_contrato h3 img {
+  width: 45px;
+  height: auto;
+  margin: 0 20px 0px 20px;
+  float: left;
+}
+#loading_contrato h3 span {
+  margin-top: 15px;
+  margin-right: 20px;
+  display: block;
+}
+
+.red {
+  color: red !important;
+}
+
+.green {
+  color: green !important;
+}
+
+select {
+  width: 100%;
+}
+select .informatica {
+  color: #154fa5;
+}
+select .web {
+  color: #1111ff;
+}
+select .ingles {
+  color: #cf0675;
+}
+select .excel {
+  color: green;
+}
+select .bd {
+  color: #ad593a;
+}
+select .re {
+  color: #702e70;
+}
+
+option[disabled] {
+  color: #ccc !important;
+}
+
+.required {
+  color: red;
+  margin-left: -10px;
+  margin-right: 5px;
+}
+
 #page_login {
   display: flex;
   align-items: center;
@@ -1559,6 +1956,10 @@ body {
   background: #ccc;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
+}
+
+h1 {
+  text-align: center;
 }
 
 #adminContent {
