--- a/src/assets/css/sass/abstracts/_forms.scss
+++ b/src/assets/css/sass/abstracts/_forms.scss
@@ -14,6 +14,8 @@ inputs{
    padding: $padding-heavy;
   max-width: 600px;
   margin: 20px auto;
+  height: auto;
+
   background:#fff;
   transition: all 2s;
   h3{
@@ -27,6 +29,11 @@ inputs{
      padding: $padding-extra-light;
      flex-grow: 1;
      max-width: 100%;
+    min-height: 45px;
+    padding:5px 0px;
+    margin-top:5px;
+    justify-content: center;
+
      label{
        display:flex;
        align-items: center;
@@ -34,6 +41,7 @@ inputs{
        background:#f0f0f0;
        padding:5px 10px;
      }
+
      input, textarea{
        width:auto;
        max-width: 500px;
@@ -46,6 +54,11 @@ inputs{
         color: $text-color; 
      }
    }
+   select {
+    display: block;
+    flex-grow: 1;
+  }
+ 
    input[type=submit]{
        @extend .btn-primary;
        display: block;
