--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -28,6 +28,8 @@
     justify-content: space-between;
     padding-bottom:20px;
     label{
+    border-radius: 3px 0px 0px 3px;
+
       background:#fff;
       display: block;
       padding: 10px;
