--- a/src/assets/css/sass/controle_aula/_form_add_aluno.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aluno.scss
@@ -10,10 +10,14 @@
     }
    
    div{
-
+     display: flex;
      #ra{
        max-width: 20px;
        flex-shrink:1;
+     }
+     select{
+       padding: 0px !important;
+       margin-top: 0px !important;
      }
    }
    
