--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -441,6 +441,7 @@ inputs, .input-primary {
   padding: 40px;
   max-width: 600px;
   margin: 20px auto;
+  height: auto;
   background: #fff;
   transition: all 2s;
 }
@@ -458,6 +459,10 @@ inputs, .input-primary {
   padding: 5px;
   flex-grow: 1;
   max-width: 100%;
+  min-height: 45px;
+  padding: 5px 0px;
+  margin-top: 5px;
+  justify-content: center;
 }
 .form_flex div label, .forms div label {
   display: flex;
@@ -476,6 +481,10 @@ inputs, .input-primary {
   border: 1px solid #ccc;
   padding: 5px;
   color: #444;
+}
+.form_flex select, .forms select {
+  display: block;
+  flex-grow: 1;
 }
 .form_flex input[type=submit], .forms input[type=submit] {
   display: block;
@@ -674,22 +683,7 @@ inputs, .input-primary {
 #form_add_aula {
   border: 2px solid #2d74d1;
   box-shadow: 0px 1px 1px #222;
-  height: auto;
   background: #fff;
-}
-#form_add_aula div {
-  min-height: 35px;
-  margin-top: 15px;
-  padding: 0px;
-  display: flex;
-  justify-content: center;
-}
-#form_add_aula div select {
-  display: block;
-  flex-grow: 1;
-}
-#form_add_aula div input {
-  flex-grow: 1;
 }
 #form_add_aula #div_detalhes {
   min-height: 50px;
@@ -776,8 +770,9 @@ inputs, .input-primary {
   flex-direction: row;
   justify-content: start;
   padding: 5px;
-  background: #dcdde7;
+  background: #f0f0f0;
   display: none;
+  border: 1px solid #245da7;
 }
 #form_add_aula #bg_prova_inputs div {
   max-width: auto;
@@ -795,6 +790,7 @@ inputs, .input-primary {
 }
 #form_add_aula #bg_prova_inputs input,
 #form_add_aula #bg_prova_inputs textarea {
+  background: #fff;
   min-width: auto;
   height: 30px;
   max-height: auto;
@@ -850,6 +846,7 @@ inputs, .input-primary {
   padding-bottom: 20px;
 }
 #controle_aula #form_select_aluno label {
+  border-radius: 3px 0px 0px 3px;
   background: #fff;
   display: block;
   padding: 10px;
@@ -995,6 +992,13 @@ nav.nav_cursos_aluno ul li .active {
   background: #f0f0f0;
   float: left;
 }
+#aluno_content .btn_baixar_historico:hover {
+  background: #dfdfdf;
+}
+#aluno_content .btn_baixar_historico:active {
+  background: #f8f8f8;
+  box-shadow: inset 0px 0px 2px #222;
+}
 #aluno_content .btn_add_aula {
   border-color: #245da7;
   color: #245da7;
@@ -1009,24 +1013,25 @@ nav.nav_cursos_aluno ul li .active {
   margin-left: -5px;
 }
 #aluno_content .btn_add_aula:hover {
-  background: #e9f1fa;
+  background: #edf3fb;
 }
 #aluno_content .btn_add_aula:active {
-  box-shadow: inset 0px 0px 3px #111;
+  box-shadow: inset 0px 0px 2px #222;
+  background: #f8f8f8;
 }
 #aluno_content .btn_add_reposicao {
   color: #8971cc;
   border-color: #8971cc;
 }
 #aluno_content .btn_add_reposicao:hover {
-  background: #e7e2f4;
+  background: #f0edf8;
 }
 #aluno_content .btn_add_ponto_extra {
   color: #779214;
   border-color: #779214;
 }
 #aluno_content .btn_add_ponto_extra:hover {
-  background: #f4fade;
+  background: #fafdf0;
 }
 #aluno_content .bg_curso {
   position: relative;
@@ -1112,7 +1117,7 @@ nav.nav_cursos_aluno ul li .active {
   background: #eee;
   margin-bottom: 10px;
   box-shadow: 0px 1px 1px #999;
-  /*h2 bimestre title*/
+  /*h3 bimestre title*/
 }
 #aluno_content .bg_bimestres .bimestres .resumo_bimestre {
   width: 100%;
@@ -1143,11 +1148,11 @@ nav.nav_cursos_aluno ul li .active {
 }
 #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral {
   padding: 10px;
-  margin-top: 5px;
+  margin-top: 0px;
   margin-bottom: 10px;
   grid-column: 1/4;
   min-width: 100%;
-  border: 1px solid #ccc;
+  box-shadow: 0px 0px 0px 1px #ccc;
   display: flex;
   flex-wrap: wrap;
   flex: 100% 50% 50%;
@@ -1176,16 +1181,15 @@ nav.nav_cursos_aluno ul li .active {
 #aluno_content .bg_bimestres .bimestres .resumo_bimestre .feedback_bimestral .btn_add_feedback_bimestral:hover {
   background: #f6f6e0;
 }
-#aluno_content .bg_bimestres .bimestres h2 {
+#aluno_content .bg_bimestres .bimestres h3 {
   font-weight: normal;
   flex-basis: 100%;
   font-size: 18px;
   color: #444;
   text-transform: capitalize;
-  margin-top: -10px;
+  margin-top: 0px;
   margin-bottom: 10px;
   padding-bottom: 10px !important;
-  border-bottom: 1px solid #ccc;
   color: #4d4d4d;
 }
 #aluno_content .bg_bimestres .bimestres .columns {
@@ -1412,9 +1416,16 @@ input:disabled, textarea:disabled {
   border: 1px solid #db1e1e;
   background: #fee;
 }
+#form_add_aluno div {
+  display: flex;
+}
 #form_add_aluno div #ra {
   max-width: 20px;
   flex-shrink: 1;
+}
+#form_add_aluno div select {
+  padding: 0px !important;
+  margin-top: 0px !important;
 }
 
 #form_add_curso select > option:disabled {
