--- a/src/components/controleAula/formAddAula.html
+++ b/src/components/controleAula/formAddAula.html
@@ -19,12 +19,7 @@
 
   <p id='aluno_nome'></p>
   <p id='curso_nome'></p>
-  <select id='select_categoria'>
-    <option value='comum'>Comum</option>
-    <option value='reposição'>Reposição</option>
-    <option value='reforço' >Reforço</option>
-    <option value='prova'>Prova</option>
-  </select>
+  <input type='text' id='aula_categoria' value='' required>
     <div id='div_select_curso'><label>Curso:</label>
       <select id='select_curso'>
         <option></option>
