Ajustes de layout

--- a/src/assets/css/sass/abstracts/_forms.scss
+++ b/src/assets/css/sass/abstracts/_forms.scss
@@ -11,7 +11,7 @@ inputs{
    flex-wrap: wrap;
    border-radius: $border-radius;
    border-color: $border-color-medium;
-   padding: $padding-heavy;
+   padding: $padding-large;
   max-width: 600px;
   margin: 20px auto;
   height: auto;
