--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -47,4 +47,4 @@ $border-radius: 3px;
 $padding-extra-light : 5px; 
 $padding-light : 10px; 
 $padding-medium : 20px;
-$padding-heavy : 40px;
+$padding-large : 40px;
