--- a/src/assets/css/sass/elements/header_admin.scss
+++ b/src/assets/css/sass/elements/header_admin.scss
@@ -14,7 +14,7 @@
       justify-content: flex-end;
       align-items: center;
       margin: 0px auto;
-      padding: 0px $padding-heavy;
+      padding: 0px $padding-large;
       max-width: 100%;
       #login_info{
         display:flex;
