--- a/src/assets/css/sass/controle_aula/_aluno_content.scss
+++ b/src/assets/css/sass/controle_aula/_aluno_content.scss
@@ -349,9 +349,12 @@ nav.nav_cursos_aluno {
                 width: 24%;
                 min-width: 200px;
                 flex-grow: 1;
-                border: $border-set-default;
+              //  border: $border-set-default;
+              background: #f8f8f8;
+              box-shadow: 0px 1px 2px #ccc;
                 padding-top:15px;
                 padding-bottom:15px;
+                margin-top:1px;
 
             }
             .column_reposicao {
